using System;
using System.Collections.Generic;
using System.Text;

namespace ISP.Good
{
    interface IApp
    {
        public void UseApp();
    }
}
