using System;
using System.Collections.Generic;
using System.Text;

namespace ISP.Good
{
    interface ICall
    {
        public void Call();
    }
}
