using System;
using System.Collections.Generic;
using System.Text;

namespace ISP.Good
{
    interface IMail
    {
        public void SendMail();
    }
}
